might have the data might not

--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>anfis_rl</name>
+  <name>anfis_rl2</name>
   <version>0.0.0</version>
   <description>The anfis_rl package</description>
 
