--- a/package.xml
+++ b/package.xml
@@ -7,19 +7,19 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="marius@todo.todo">marius</maintainer>
+  <maintainer email="marius.juston@htomail.fr">Marius Juston</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/anfis_rl</url> -->
+   <url type="website">https://github.com/AUVSL/anfis_rl</url>
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
